sign up register page created

--- a/client-side/src/app/login/login.component.html
+++ b/client-side/src/app/login/login.component.html
@@ -12,11 +12,11 @@
     </div>
     <div class="button">
 
-        <button class="learn-more w-100" (click)="login()">
+        <button class="learn-more w-100">
           <span class="circle bg-success">
           <span class="icon arrow"></span>
           </span>
-          <span class="button-text btn" (click)="login()">Login</span>
+          <span class="button-text btn">Login</span>
         </button>
     </div>
 </div>
