--- a/client-side/src/app/navbar/navbar.component.html
+++ b/client-side/src/app/navbar/navbar.component.html
@@ -1,13 +1,13 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light">
+<nav class="navbar navbar-expand-md navbar-light bg-light px-3">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <a class="navbar-brand fw-bold fs-3"  routerLink="/signup">LOGO</a>
+      <a class="navbar-brand fw-bold fs-3 "  routerLink="/signup">FIXTECH</a>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/signup">Create User</a>
+          <a class="nav-link" aria-current="page" routerLink="/signup">Dashboard</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/">User List</a>
@@ -19,7 +19,7 @@
           <a class="nav-link" routerLink="/reactive">Reactive form</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/api-users">Api Users</a>
+          <a class="nav-link" routerLink="/api-users" routerLinkActive="active">Profile</a>
         </li>
        
       </ul>
