--- a/client-side/src/app/signup/signup.component.css
+++ b/client-side/src/app/signup/signup.component.css
@@ -1,3 +1,7 @@
+.rounded{
+    background-color: rgb(3, 3, 49);
+    color: white ;
+}
 
 @media screen and (max-width: 870px) and (min-width: 100px)  {
         .btn-primary{
