--- a/client-side/src/app/signup/signup.component.html
+++ b/client-side/src/app/signup/signup.component.html
@@ -1,52 +1,55 @@
 
-<div class="form col-md-4 mx-auto shadow p-3">
-    <h3 class="text-center card-header">Create Your Account</h3>
-    <form [formGroup]="formGroup" (submit)="handleRegister()">
+<div class="form col-md-5 mx-auto shadow p-3 borde borde-primary rounded">
+    <div class="borde borde-primary shadow-sm rounded-1">
+        
+        <h3 class="text-center card-header bg-primary rounded-3 text-light py-2">Create Your Account</h3>
+        <small class="alert alert-danger py-0" *ngIf="message != ''">{{message}}</small>
+        <form [formGroup]="formGroup" (submit)="handleRegister()">
         <div class="row">
             <div class="form-group col-md-6 my-3">
                 <label for="" class="fw-bold">First Name</label>
                 <div class="form-floating">
                     <input type="text" class="form-control " name="firstname" placeholder="firstname" formControlName="firstname" [class.is-valid]="formGroup.get('firstname')?.valid && formGroup.get('firstname')?.touched " [class.is-invalid]="formGroup.get('firstname')?.invalid && formGroup.get('firstname')?.touched " >
-                    <label for="">First Name</label>
+                    <label for="" class="text-dark">First Name</label>
                 </div>
                 <div *ngIf="formGroup.get('firstname')?.errors && formGroup.get('firstname')?.touched">
-                    <small class="alert alert-danger" *ngIf="formGroup.get('firstname')?.errors?.['required']">First name must be provided(It is required)</small>
-                    <small class="alert alert-danger" *ngIf="formGroup.get('firstname')?.errors?.['minlength']">First name must not less than 3 character!</small>
+                    <small class="text-danger" *ngIf="formGroup.get('firstname')?.errors?.['required']">First name must be provided(It is required)</small>
+                    <small class="text-danger" *ngIf="formGroup.get('firstname')?.errors?.['minlength']">First name must not less than 3 character!</small>
                 </div>
             </div>
             <div class="form-group col-md-6 my-3">
                 <label for="" class="fw-bold">Last Name</label>
                 <div class="form-floating">
                     <input type="text" class="form-control " name="lastname" placeholder="lastname" formControlName="lastname" [class.is-valid]="formGroup.get('lastname')?.valid && formGroup.get('lastname')?.touched " [class.is-invalid]="formGroup.get('lastname')?.invalid && formGroup.get('lastname')?.touched " >
-                    <label for="">Last Name</label>
+                    <label for="" class="text-dark">Last Name</label>
                 </div>
                 <div *ngIf="formGroup.get('lastname')?.errors && formGroup.get('lastname')?.touched">
-                    <small class="alert alert-danger" *ngIf="formGroup.get('lastname')?.errors?.['required']">Last name must be provided(It is required)</small>
-                    <small class="alert alert-danger" *ngIf="formGroup.get('lastname')?.errors?.['minlength']">Last name must not less than 3 character!</small>
+                    <small class="text-danger" *ngIf="formGroup.get('lastname')?.errors?.['required']">Last name must be provided(It is required)</small>
+                    <small class="text-danger" *ngIf="formGroup.get('lastname')?.errors?.['minlength']">Last name must not less than 3 character!</small>
                 </div>
             </div>
         </div>
-
-            <div class="form-group my-3">
+        
+        <div class="form-group my-3">
                 <label for="" class="fw-bold">E-mail Address</label>
                 <div class="form-floating">
                     <input type="email" class="form-control " name="email" placeholder="email" formControlName="email" [class.is-valid]="formGroup.get('email')?.valid && formGroup.get('email')?.touched " [class.is-invalid]="formGroup.get('email')?.invalid && formGroup.get('email')?.touched " >
-                    <label for="">E-mail</label>
+                    <label for="" class="text-dark">E-mail</label>
                 </div>
                 <div *ngIf="formGroup.get('email')?.errors && formGroup.get('email')?.touched">
-                    <small class="alert alert-danger" *ngIf="formGroup.get('email')?.errors?.['required']">E-mail address must be provided(It is required)</small>
-                    <small class="alert alert-danger" *ngIf="formGroup.get('email')?.errors?.['email']">Email must include @ sign</small>
+                    <small class="text-danger" *ngIf="formGroup.get('email')?.errors?.['required']">E-mail address must be provided(It is required)</small>
+                    <small class="text-danger" *ngIf="formGroup.get('email')?.errors?.['email']">E-mail is not valid, please insert a valid email</small>
                 </div>
             </div>
             <div class="form-group my-3">
                 <label for="" class="fw-bold">Contact</label>
                 <div class="form-floating">
                     <input type="tel" class="form-control " name="contact" placeholder="contact" formControlName="contact" [class.is-valid]="formGroup.get('contact')?.valid && formGroup.get('contact')?.touched " [class.is-invalid]="formGroup.get('contact')?.invalid && formGroup.get('contact')?.touched " >
-                    <label for="">Contact</label>
+                    <label for="" class="text-dark">Contact</label>
                 </div>
                 <div *ngIf="formGroup.get('contact')?.errors && formGroup.get('contact')?.touched">
-                    <small class="alert alert-danger" *ngIf="formGroup.get('contact')?.errors?.['required']">Contact must be provided(It is required)</small>
-                    <small class="alert alert-danger" *ngIf="formGroup.get('contact')?.errors?.['pattern']">Contact must be 11 digit numbers starting with 0</small>
+                    <small class="text-danger" *ngIf="formGroup.get('contact')?.errors?.['required']">Contact must be provided(It is required)</small>
+                    <small class="text-danger" *ngIf="formGroup.get('contact')?.errors?.['pattern']">Contact must be 11 digit numbers starting with 0</small>
                 </div>
             </div>
         <div class="row">
@@ -54,27 +57,32 @@
                 <label for="" class="fw-bold">Password</label>
                 <div class="form-floating">
                     <input type="password" class="form-control " name="password" placeholder="password" formControlName="password" [class.is-valid]="formGroup.get('password')?.valid && formGroup.get('password')?.touched " [class.is-invalid]="formGroup.get('password')?.invalid && formGroup.get('password')?.touched " >
-                    <label for="">Password</label>
+                    <label for="" class="text-dark">Password</label>
                 </div>
                 <div *ngIf="formGroup.get('password')?.errors && formGroup.get('password')?.touched">
-                    <small class="alert alert-danger" *ngIf="formGroup.get('password')?.errors?.['required']">E-mail address must be provided(It is required)</small>
-                    <small class="alert alert-danger" *ngIf="formGroup.get('password')?.errors?.['minlength']">Password must at least upto 6 characters</small>
+                    <small class="text-danger" *ngIf="formGroup.get('password')?.errors?.['required']">E-mail address must be provided(It is required)</small>
+                    <small class="text-danger" *ngIf="formGroup.get('password')?.errors?.['minlength']">Password must at least upto 6 characters</small>
                 </div>
             </div>
             <div class="form-group col-md-6 my-3">
                 <label for="" class="fw-bold">Confirm Password</label>
                 <div class="form-floating">
                     <input type="password" class="form-control " name="co-password" placeholder="password" formControlName="co_password" [class.is-valid]="formGroup.get('co_password')?.valid && formGroup.get('password')?.touched " [class.is-invalid]="formGroup.get('co_password')?.invalid && formGroup.get('co_password')?.touched " >
-                    <label for="">Confirm password</label>
+                    <label for="" class="text-dark">Confirm password</label>
                 </div>
                 <div *ngIf="formGroup.get('co_password')?.errors && formGroup.get('co_password')?.touched">
-                    <small class="alert alert-danger" *ngIf="formGroup.get('co_password')?.errors?.['required']">Password must be provided(It is required)</small>
+                    <small class="text-danger" *ngIf="formGroup.get('co_password')?.errors?.['required']">Password must be provided(It is required)</small>
                     
                 </div>
             </div>
         </div>
-
-    
-        <button class="btn btn-primary mx-auto rounded-pill w-100" type="submit">Create Account</button>
+        <div class="col-12 px-2">
+            <p class="text-muted">By proceeding, you have agreed to the <a href="/register" class="text-decoration-none">terms</a> and <a href="/register" class="text-decoration-none">condition</a> of the site</p>
+        </div>
+        <div class="col-12 px-2">
+            <p>Already have an account? <a routerLink="/login" class="text-decoration-none text-primary">Log in.</a></p>
+        </div>
+        <button class="btn btn-primary mx-auto rounded-pill w-100" type="submit" [disabled]="">Create Account</button>
     </form>
+    </div>
 </div>
