--- a/client-side/src/app/app.component.html
+++ b/client-side/src/app/app.component.html
@@ -1,2 +1,6 @@
+<!-- <app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav> -->
 
-<router-outlet></router-outlet>
+<!-- <app-body [collapsed]="isCollapsed" [screenWidth]="screenWidth"></app-body> -->
+<!-- <div class="body" [class]="getBodyClass()"> -->
+    <router-outlet></router-outlet>
+<!-- </div> -->
