--- a/client-side/src/app/home/home.component.html
+++ b/client-side/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<app-navbar></app-navbar>
+<!-- <app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
+
+<app-body [collapsed]="isCollapsed" [screenWidth]="screenWidth"></app-body> -->
+<h1>Welcome to Home page</h1>
