--- a/client-side/src/app/sidenav/sidenav.component.html
+++ b/client-side/src/app/sidenav/sidenav.component.html
@@ -7,4 +7,10 @@
             </a>
         </li>
     </ul>
+    <li class="nav-list list-unstyled side-nav-item mx-2">
+        <a href="" class="text-decoration-none sidenav-nav-link">
+            <i class="nav-icon fa fa-download">ICN</i>
+            <span class="mx-3 text-danger">Logout</span>
+        </a>
+    </li>
 </div>
