--- a/client-side/src/app/app.component.html
+++ b/client-side/src/app/app.component.html
@@ -1,2 +1,12 @@
+<!-- <app-header (sideNavToggled)="sideNavStatus = $event"></app-header>
+<main>
+    <app-sidenav class=" shadow" [sideNavStatus]="sideNavStatus" [ngClass]="{'app-side-nav-open': sideNavStatus}"></app-sidenav>
+    <div class="display-area p-3" [ngClass]="{'display-area-shrink': sideNavStatus}">
+        <p class="fs-3 fw-bold fst-italic">main display area</p>
+        <div class="space-start">
+           
+        </div>
+    </div>
+</main> -->
 
     <router-outlet></router-outlet>
