--- a/client-side/src/app/header/header.component.html
+++ b/client-side/src/app/header/header.component.html
@@ -1,12 +1,14 @@
 <nav class="navbar navbar-expand nav-header-color px-2">
     <div class="side-nav-button p-2 text-light" (click)="sideNavToggle()">MENU <i class="fa-solid fa-bars"></i></div>
-    <a href="#" class="navbar-brand px-4">Header and SideNav</a>
+    <h1><a href="" routerLink="/home/dashboard" class="navbar-brand px-4 fs-3 text-light fw-bold">FIXCOM</a></h1>
     <div class="navbar-collapse">
         <ul class="navbar-nav ms-auto">
-            <li class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">Profile</a>
+            <li class="nav-item dropdown border">
+                <a href="#" class="nav-link" role="button" data-bs-toggle="dropdown">
+                <img src="" style="height: 50px; width: 50px;" class="rounded-circle" alt="profile photo">
+                </a>
                 <ul class="dropdown-menu dropdown-menu-dark">
-                    <li><a href="" class="dropdown-item">Profile</a></li>
+                    <li><a href="" routerLink='/home/profile/{{userId}}' class="dropdown-item">Profile</a></li>
                     <li><a href="" class="dropdown-item">Setting</a></li>
                     <li><a href="" class="dropdown-item">Log out</a></li>
                 </ul>
