--- a/client-side/src/styles.css
+++ b/client-side/src/styles.css
@@ -41,13 +41,13 @@ app-sidenav{
 }
 .display-area{
     position: absolute;
-    left: 70px;
-    width: calc(100%-70px);
+    left: 5%;
+    width: 95%;
     transition: left 250ms linear, width 250ms linear;
 }
 .display-area-shrink{
-    left: 230px;
-    width: calc(100%-230px);
+    left: 17%;
+    width: 83%;
     transition: all 0.5s ease;
 }
 .app-side-nav-open{
