--- a/client-side/src/styles.css
+++ b/client-side/src/styles.css
@@ -1,20 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
-
-/* *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.textColor{
+    color: rgb(3, 3, 49);
 }
-
-body{
-    position: relative;
-    font-family: sans-serif;
-    
-}
-.space-start{
-    margin-left: 15vh;
-} */
-
 
 app-header{
     position: fixed;
@@ -24,26 +10,30 @@ app-header{
     z-index: 2;
 }
 main{
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
     top: 4rem;
+    margin-top: 4rem;
     z-index: 1;
+    overflow: hidden;
 }
 app-sidenav{
     position: absolute;
-    width: 67px;
+    width: 0px;
     background: rgb(3, 3, 49);
     height: 90vh;
     border-top: 1px solid white;
     overflow: hidden;
     white-space: nowrap;
     transform: width 250ms linear;
+    z-index: 10;
 }
 .display-area{
     position: absolute;
-    left: 5%;
-    width: 95%;
+    left: 0;
+    width: 100%;
     transition: left 250ms linear, width 250ms linear;
+
 }
 .display-area-shrink{
     left: 17%;
@@ -54,3 +44,5 @@ app-sidenav{
     width: 230px;
     transition: all 0.5s ease;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
