--- a/client-side/src/app/dashboard/dashboard.component.html
+++ b/client-side/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,8 @@
     <div class="display-area p-3" [ngClass]="{'display-area-shrink': sideNavStatus}">
         <div class="">
             <div class="shadow-sm py-2">
-                <h4 class="bn_firstColor ps-2">Dashboard</h4>
+                <h4 class="bn_firstColor ps-2 text-danger">Dashboard</h4>
+                <h4 class="bn_firstColor ps-2"><small class="textColor">Hello</small> {{userDetail !==undefined? (userDetail.firstname + " "+ userDetail.lastname): "user"}} <small class="fs-6 text-primary">Welcome back!</small></h4>
                 <h5 class="ps-4"></h5>
             </div>
             <div class="row mx-auto my-3">
@@ -17,7 +18,7 @@
                                     : "eye on"}}
                                 </span>
                             </p>
-                            <h4 *ngIf="eyeSwitch">{{notEmpty? (userDetail.totalBalance| currency:'USD')
+                            <h4 *ngIf="eyeSwitch">{{userDetail !== undefined? (userDetail.totalBalance| currency:'USD')
                                 : 000| currency:'USD'}}</h4>
 
                             <h4 *ngIf="!eyeSwitch">xxxxx</h4>
@@ -56,7 +57,7 @@
                     </div>
                 </div>
             </div>
-
+            <app-statistics></app-statistics>
         </div>
     </div>
 </main>
