--- a/client-side/src/app/dashboard/dashboard.component.html
+++ b/client-side/src/app/dashboard/dashboard.component.html
@@ -5,23 +5,25 @@
     <div class="display-area p-3" [ngClass]="{'display-area-shrink': sideNavStatus}">
         <div class="">
             <div class="shadow-sm py-2">
-                <h4 class="bn_firstColor ps-2 text-danger">Dashboard</h4>
-                <h4 class="bn_firstColor ps-2"><small class="textColor">Hello</small> {{userDetail !==undefined? (userDetail.firstname + " "+ userDetail.lastname): "user"}} <small class="fs-6 text-primary">Welcome back!</small></h4>
+                <h4 class="bn_firstColor ps-2 text-danger fs-3 fw-bold">Dashboard</h4>
+                <h2 class="bn_firstColor ps-2"><small class="textColor">Hello</small> {{userDetail !==undefined? (userDetail.firstname + " "+ userDetail.lastname): "user"}} <small class="fs-6 text-primary">Welcome back!</small></h2>
                 <h5 class="ps-4"></h5>
             </div>
             <div class="row mx-auto my-3">
                 <div class="col-lg-4 my-2">
                     <div class="h-100 py-2 shadow border-0">
                         <div class="text-center">
-                            <p class="fw-bold bn_secondColor">Account Balance
-                                <span class="float-end mx-2 cursorPointer" (click)="switchEye()">{{eyeSwitch? 'eye off'
-                                    : "eye on"}}
+                            <p class="fs-5 bn_secondColor">Account Balance
+                                <span class="float-end mx-2 cursorPointer" (click)="switchEye()">
+                                    <fa-icon *ngIf="!eyeSwitch" [icon]="icons.faEye"></fa-icon>
+                                    <fa-icon *ngIf="eyeSwitch" [icon]="icons.faEyeSlash"></fa-icon>
                                 </span>
+                              
                             </p>
-                            <h4 *ngIf="eyeSwitch">{{userDetail !== undefined? (userDetail.totalBalance| currency:'USD')
-                                : 000| currency:'USD'}}</h4>
+                            <h1 *ngIf="eyeSwitch" class="fw-bold">{{userDetail !== undefined? (userDetail.totalBalance| currency:'USD')
+                                : 000| currency:'USD'}}</h1>
 
-                            <h4 *ngIf="!eyeSwitch">xxxxx</h4>
+                            <h1 *ngIf="!eyeSwitch">xxxxx</h1>
                         </div>
                     </div>
                 </div>
