--- a/client-side/src/app/settings/settings.component.html
+++ b/client-side/src/app/settings/settings.component.html
@@ -1,3 +1,12 @@
-<div class="space-start">
-    <p>settings works!</p>
-</div>
+<app-header (sideNavToggled)="sideNavStatus = $event"></app-header>
+<main>
+    <app-sidenav class=" shadow" [sideNavStatus]="sideNavStatus" [ngClass]="{'app-side-nav-open': sideNavStatus}">
+    </app-sidenav>
+    <div class="display-area p-3" [ngClass]="{'display-area-shrink': sideNavStatus}">
+        <p class="fs-3 fw-bold fst-italic">main display area</p>
+        <div class="space-start">
+           
+        </div>
+    </div>
+</main>
+
