--- a/client-side/src/styles.css
+++ b/client-side/src/styles.css
@@ -1,3 +1,6 @@
+*{
+    overflow: hidden;
+}
 .textColor{
     color: rgb(3, 3, 49);
 }
@@ -10,37 +13,65 @@ app-header{
     z-index: 2;
 }
 main{
-    /* position: absolute; */
     width: 100%;
     top: 4rem;
     margin-top: 4rem;
     z-index: 1;
-    overflow: hidden;
 }
+
 app-sidenav{
     position: absolute;
     width: 0px;
     background: rgb(3, 3, 49);
     height: 90vh;
     border-top: 1px solid white;
-    overflow: hidden;
     white-space: nowrap;
     transform: width 250ms linear;
     z-index: 10;
+    overflow: hidden !important;
 }
 .display-area{
     position: absolute;
     left: 0;
     width: 100%;
+    height: 100vh;
     transition: left 250ms linear, width 250ms linear;
-
+    overflow: auto;
 }
 .display-area-shrink{
     left: 17%;
     width: 83%;
     transition: all 0.5s ease;
 }
-.app-side-nav-open{
+.display-area::-webkit-scrollbar{
+    width: 6px;
+    border-radius: 6vh;
+    overflow: auto;
+    height: 100vh;
+}
+.display-area-shrink::-webkit-scrollbar{
+    width: 3px;
+    border-radius: 6vh;
+    overflow: auto;
+    height: 100vh;
+}
+.display-area::-webkit-scrollbar-thumb{
+    background: rgb(3, 3, 49);
+  border-radius: 10px;
+}
+.display-area-shrink::-webkit-scrollbar-thumb{
+    background: rgb(3, 3, 49);
+  border-radius: 10px;
+}
+.display-area::-webkit-scrollbar-track{
+    box-shadow: inset 0 0 5px rgb(209, 201, 201);
+    border-radius: 10px;
+}
+.display-area-shrink::-webkit-scrollbar-track{
+    box-shadow: inset 0 0 5px rgb(209, 201, 201);
+    border-radius: 10px;
+}
+.app-side-nav-open{                              
     width: 230px;
     transition: all 0.5s ease;
 }
